@@ -90,6 +90,10 @@ int vsnprintf(char *str, size_t size, const char *format, va_list ap);
 #define MAX(x,y) ((x)>(y)?(x):(y))
 #endif
 
+/* 
+ * The following three functions return newly allocated memory.
+ * You must free it yourself
+ */
 char * y_string_append(char * str, char * append);
 char * y_str_to_utf8(const char * in);
 char * y_utf8_to_str(const char * in);
