@@ -2,6 +2,7 @@
 - Added CHAT service codes from yach
 - Fixed the problem with Offline UTF-8 encoded messages
 it no longer sends an extra bell
+- Implemented group renaming
 
 * Sat Jan 18 2003 Philip
 - utf-8 encoding/decoding functions are in yahoo_util
